--- a/environment.yml
+++ b/environment.yml
@@ -3,149 +3,28 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - altair
-  - audioread
-  - backports
-  - backports.weakref
-  - bleach
-  - branca
-  - cartopy
-  - folium
-  - freetype
-  - geos
-  - hdf5
-  - html5lib
-  - icu
-  - imbalanced-learn
-  - joblib
-  - jpeg
-  - libiconv
-  - libpng
-  - libprotobuf
-  - libsodium
-  - libtiff
-  - libxml2
-  - libxslt
-  - llvmlite
-  - lxml
   - matplotlib
-  - mock
-  - pbr
   - pillow
   - proj4
   - protobuf
   - pyproj
-  - qt
-  - resampy
-  - shapely
-  - tk
-  - vincent
-  - webencodings
   - yaml
-  - zeromq
   - zlib
-  - _r-mutex
-  - _tflow_1100_select
-  - absl-py
-  - asn1crypto
-  - astor
-  - backcall
-  - blas
   - bokeh
-  - ca-certificates
-  - certifi
-  - cffi
-  - chardet
-  - click
-  - cloudpickle
-  - colorama
-  - cryptography
-  - cycler
-  - cytoolz
-  - decorator
-  - distributed
-  - entrypoints
-  - gast
-  - grpcio
-  - h5py
-  - heapdict
-  - idna
-  - intel-openmp
   - ipython_genutils
-  - jedi
-  - jinja2
-  - jsonschema
   - jupyter_client
   - jupyter_core
-  - kiwisolver
-  - locket
   - markdown
-  - markupsafe
-  - mistune
-  - mkl
-  - mkl_fft
-  - mkl_random
-  - mro-base
-  - msgpack-python
-  - nbconvert
-  - nbformat
-  - nltk
   - numpy
   - numpy-base
-  - olefile
-  - openssl
-  - owslib
-  - packaging
   - pandas
-  - pandoc
-  - pandocfilters
-  - parso
-  - partd
-  - patsy
-  - pickleshare
   - pip
-  - prometheus_client
-  - prompt_toolkit
-  - psutil
-  - pycparser
-  - pyepsg
-  - pygments
-  - pyopenssl
-  - pyparsing
-  - pyqt
-  - pyshp
-  - pysocks
   - python
   - python-dateutil
-  - pytz
-  - pyyaml
-  - pyzmq
-  - requests
-  - rpy2
   - scikit-learn
   - scipy
   - seaborn
-  - send2trash
-  - setuptools
-  - simplegeneric
-  - sip
-  - six
-  - sortedcontainers
-  - statsmodels
-  - tblib
-  - termcolor
-  - terminado
-  - testpath
-  - toolz
-  - tornado
-  - traitlets
-  - urllib3
-  - wcwidth
-  - werkzeug
-  - wheel
-  - zict
   - pip:
-    - ffmpeg
     - librosa
     - msgpack
-prefix: C:\Users\s4d-asus-14\Anaconda3\envs\python-data-scientist
+prefix: /srv/Anaconda3/envs/python-data-scientist
